<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#2BD6B3">

    <Button
        android:id="@+id/back_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_yong_yuan_lin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id_a24dw0325" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programme_diploma_in_computer_science" />



</LinearLayout>