<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="#E3F2FD">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_student"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_information_system"
        android:textSize="16sp"
        android:padding="8dp" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_student_profile"
        android:layout_marginTop="16dp"
        android:backgroundTint="#940808"
        android:textColor="@android:color/white" />

</LinearLayout>
